# aspect

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
aspect/: __init__.py  checkpoint_utils.py  data.py  functions.py  io.py  package_data.py  serializing.py  typing.py
aspect/cli_module/: cli.py  featurize.py  io.py
aspect/pipeline/: data.py  io.py
aspect/transform/: __init__.py  base.py  deep_functions.py  functions.py
docs/source/: conf.py  installation.md
test/: test_pipeline.py
test/scripts/: run-tests.sh
